# kube-shell

./: .gitignore  .kube-shell-state  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: release.yml  rust.yml
src/: ai.rs  commands.rs  completion.rs  config.rs  constants.rs  interrupt.rs  jobs.rs  kubectl.rs  main.rs  multi_logs.rs  types.rs
