[package]
name = "kube-shell"
version = "0.4.0"
edition = "2024"

[dependencies]
rustyline = "14"
shlex = "1.3"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
ctrlc = "3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1"
reqwest = { version = "0", features = ["blocking", "json"] }
